Remove legacy JBoss code