@@ -1,4 +1,3 @@
 @echo off
 rem call java interpreter
-java -Xbootclasspath:C:\Work\JacORB\lib\jacorb.jar;c:\jdk1.3\jre\lib\rt.jar;%CLASSPATH% -Dorg.omg.CORBA.ORBClass=org.jacorb.orb.ORB -Dorg.omg.CORBA.ORBSingletonClass=org.jacorb.orb.ORBSingleton %*
-
+java -Djava.endorsed.dirs="/Users/stuartdouglas/workspace/JacORB/lib" -Djacorb.home="/Users/stuartdouglas/workspace/JacORB" -Dorg.omg.CORBA.ORBClass=org.jacorb.orb.ORB -Dorg.omg.CORBA.ORBSingletonClass=org.jacorb.orb.ORBSingleton -classpath "%CLASSPATH%" %*
